bug fix, optimization and new features
update coming soon  style overlapping to other elements, set height for advertising coming soon

--- a/component/shared/comingSoon/styles.module.scss
+++ b/component/shared/comingSoon/styles.module.scss
@@ -1,16 +1,19 @@
 @import "@source/scss/index.scss";
 
 .comingSoon {
+  // border: 3px solid red;
+  // overflow: hidden;
   max-width: 100vw;
   overflow: hidden;
   @include quickFlex($dir: column, $width: 100%);
-  height: 100%;
+  // height: 100%;
+  padding: 10px;
   background-color: var(--primary);
   background-image: radial-gradient(circle at bottom left, var(--secondary), var(--primary) 30%);
   background-image: url("/images/layout/background.jpg");
   background-size: 100% 100%;
   background-repeat: no-repeat;
-  padding: 0 5px 10px;
+  position: relative;
   &::before {
     content: "";
     position: absolute;
@@ -24,19 +27,20 @@
   & > div:last-of-type {
     position: relative;
     @include quickFlex($dir: column, $width: 100%, $align: flex-start, $height: 100%);
-    padding: 20px 10px;
-
+    // border: 3px solid blue;
     text-align: left;
     max-width: 1100px;
     & > section {
-      margin: 40px auto;
+      margin: 30px auto 10px;
       width: 100%;
+      // border: 3px solid yellow;
       display: grid;
       grid-template-columns: 1fr 1fr 1fr 1fr;
       column-gap: 8px;
       border-radius: 20px;
       overflow: hidden;
       & > span {
+        // border: 3px solid green;
         padding: 5px;
         @include quickFlex($dir: column);
         height: clamp(100px, calc(var(--visibleScreen) - 600px), 200px);
